--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.4.0",
     "vite": "^5.4.3"
+  },
+  "volta": {
+    "node": "18.20.3",
+    "npm": "10.2.3"
   }
 }
