--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "date-fns": "^4.0.0-beta.1",
     "lodash-es": "^4.17.21",
