--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "react-drumroll",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "module": "./dist/react-mobile-picker.js",
   "scripts": {
     "dev": "vite --host",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build --config vite.config.ts",
+    "build:examples": "tsc && vite build --config vite.config.examples.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/material": "^6.1.0",
+    "@emotion/react": "^11.13.5",
+    "@mui/material": "^6.1.9",
+    "@types/node": "^22.10.1",
     "date-fns": "^4.0.0-beta.1",
     "lodash-es": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-use": "^17.5.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.10.0",
-    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.10.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.4.0",
     "vite": "^5.4.3"
   },
   "volta": {
